--- a/components/soc/CMakeLists.txt
+++ b/components/soc/CMakeLists.txt
@@ -11,5 +11,8 @@ endif()
 list(APPEND COMPONENT_ADD_INCLUDEDIRS include)
 list(APPEND COMPONENT_SRCS "src/memory_layout_utils.c")
 
+set(COMPONENT_ADD_LDFRAGMENTS linker.lf)
+
 set(COMPONENT_REQUIRES)
+
 register_component()
