--- a/components/soc/test/CMakeLists.txt
+++ b/components/soc/test/CMakeLists.txt
@@ -3,7 +3,7 @@ if(EXISTS "../${SOC_NAME}/test")
     set(COMPONENT_SRCDIRS "../${SOC_NAME}/test")
     set(COMPONENT_ADD_INCLUDEDIRS "../${SOC_NAME}/test")
 
-    set(COMPONENT_REQUIRES unity)
+    set(COMPONENT_REQUIRES unity test_utils)
 
     register_component()
 endif()
