--- a/components/esp_wifi/CMakeLists.txt
+++ b/components/esp_wifi/CMakeLists.txt
@@ -58,25 +58,30 @@ endif()
 if(CONFIG_ESP32_PHY_INIT_DATA_IN_PARTITION)
     idf_component_get_property(esp_common_dir esp_common COMPONENT_DIR)
     partition_table_get_partition_info(phy_partition_offset "--partition-type data --partition-subtype phy" "offset")
-    set(phy_init_data_bin "${build_dir}/phy_init_data.bin")
+    
+    if(CONFIG_ESP32_SUPPORT_MULTIPLE_PHY_INIT_DATA_BIN)
+        set(phy_init_data_bin "${CMAKE_CURRENT_SOURCE_DIR}/phy_multiple_init_data.bin")
+    else()
+        set(phy_init_data_bin "${build_dir}/phy_init_data.bin")
 
-    # To get the phy_init_data.bin file, compile phy_init_data.h as a C file and then objcopy
-    # the object file to a raw binary
-    idf_build_get_property(config_dir CONFIG_DIR)
-    add_custom_command(
-        OUTPUT ${phy_init_data_bin}
-        DEPENDS ${CMAKE_CURRENT_LIST_DIR}/${idf_target}/include/phy_init_data.h
-        COMMAND ${CMAKE_C_COMPILER} -x c -c
-        -I ${esp_common_dir}/include -I ${CMAKE_CURRENT_LIST_DIR}/include -I ${config_dir}
-        -o phy_init_data.obj
-        ${CMAKE_CURRENT_LIST_DIR}/${idf_target}/include/phy_init_data.h
-        COMMAND ${CMAKE_OBJCOPY} -O binary phy_init_data.obj ${phy_init_data_bin}
-        )
-    add_custom_target(phy_init_data ALL DEPENDS ${phy_init_data_bin})
-    add_dependencies(flash phy_init_data)
+        # To get the phy_init_data.bin file, compile phy_init_data.h as a C file and then objcopy
+        # the object file to a raw binary
+        idf_build_get_property(config_dir CONFIG_DIR)
+        add_custom_command(
+            OUTPUT ${phy_init_data_bin}
+            DEPENDS ${CMAKE_CURRENT_LIST_DIR}/${idf_target}/include/phy_init_data.h
+            COMMAND ${CMAKE_C_COMPILER} -x c -c
+            -I ${esp_common_dir}/include -I ${CMAKE_CURRENT_LIST_DIR}/include -I ${config_dir}
+            -o phy_init_data.obj
+            ${CMAKE_CURRENT_LIST_DIR}/${idf_target}/include/phy_init_data.h
+            COMMAND ${CMAKE_OBJCOPY} -O binary phy_init_data.obj ${phy_init_data_bin}
+            )
+        add_custom_target(phy_init_data ALL DEPENDS ${phy_init_data_bin})
+        add_dependencies(flash phy_init_data)
 
-    idf_component_get_property(main_args esptool_py FLASH_ARGS)
-    idf_component_get_property(sub_args esptool_py FLASH_SUB_ARGS)
+        idf_component_get_property(main_args esptool_py FLASH_ARGS)
+        idf_component_get_property(sub_args esptool_py FLASH_SUB_ARGS)
+    endif()
 
     # ToDo: remove once MP chip is supported
     if(CONFIG_IDF_TARGET_ESP32)
