esp_common: added a macro to allow call functions using user allocated stack

--- a/components/esp_common/CMakeLists.txt
+++ b/components/esp_common/CMakeLists.txt
@@ -7,6 +7,7 @@ if(BOOTLOADER_BUILD)
 else()
     # Regular app build
     set(srcs "src/dbg_stubs.c"
+             "src/esp_espression_with_stack_asm.S"
              "src/esp_err_to_name.c"
              "src/esp_timer.c"
              "src/ets_timer_legacy.c"
