--- a/components/esp_wifi/test/CMakeLists.txt
+++ b/components/esp_wifi/test/CMakeLists.txt
@@ -1,9 +1,4 @@
-set(srcdirs ".")
-if(IDF_TARGET STREQUAL "esp32")
-    list(APPEND srcdirs "esp32")
-endif()
-
-idf_component_register(SRC_DIRS ${srcdirs}
+idf_component_register(SRC_DIRS .
                        INCLUDE_DIRS . ${CMAKE_CURRENT_BINARY_DIR}
                        REQUIRES unity test_utils nvs_flash ulp esp_common
                       )
