soc: use include_next for including common touch sensor hal header

--- a/components/soc/CMakeLists.txt
+++ b/components/soc/CMakeLists.txt
@@ -37,7 +37,11 @@ elseif(CONFIG_IDF_TARGET_ESP32S2)
     target_sources(${COMPONENT_LIB} PRIVATE "src/hal/spi_flash_hal_gpspi.c")
 endif()
 
+# Since there can be chip-specific HAL headers which can include the common 
+# HAL header via include_next, process the build scripts here first so that 
+# include directories appear first in the compile command.
+add_subdirectory(src/${target})
+target_include_directories(${COMPONENT_LIB} PUBLIC include)
+
 add_subdirectory(soc)
 target_link_libraries(${COMPONENT_LIB} PUBLIC "soc_${target}")
-
-add_subdirectory(src/${target})
