--- a/components/esp_system/CMakeLists.txt
+++ b/components/esp_system/CMakeLists.txt
@@ -1,7 +1,7 @@
 idf_component_register(SRCS "panic.c" "system_api.c" "startup.c"
                     INCLUDE_DIRS include
                     PRIV_INCLUDE_DIRS private_include
-                    PRIV_REQUIRES spi_flash app_update 
+                    PRIV_REQUIRES spi_flash app_update
                                 # requirements due to startup code
                                 nvs_flash pthread app_trace
                     LDFRAGMENTS "linker.lf")
@@ -10,3 +10,4 @@ add_subdirectory(port)
 
 # Rely on user code to define app_main
 target_link_libraries(${COMPONENT_LIB} INTERFACE "-u app_main")
+target_link_libraries(${COMPONENT_LIB} INTERFACE "-u app_mainX")
