--- a/components/soc/src/esp32s2/CMakeLists.txt
+++ b/components/soc/src/esp32s2/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(srcs "brownout_hal.c" 
         "cpu_util.c"
         "rtc_clk.c"
+        "rtc_clk_init.c"
         "rtc_init.c"
         "rtc_pm.c"
         "rtc_sleep.c"
