driver(adc/dac): fix adc dac driver for esp32s2
1. update register file about adc; 2. fix adc driver; 3. add UT for adc/dac;

See merge request [ESP_IDF]!7776

--- a/components/soc/src/esp32s2/CMakeLists.txt
+++ b/components/soc/src/esp32s2/CMakeLists.txt
@@ -1,4 +1,5 @@
-set(srcs "brownout_hal.c" 
+set(srcs "adc_hal.c"
+        "brownout_hal.c"
         "rtc_clk.c"
         "rtc_clk_init.c"
         "rtc_init.c"
