test: declare requirements and include dirs private

--- a/components/soc/test/CMakeLists.txt
+++ b/components/soc/test/CMakeLists.txt
@@ -1,5 +1,5 @@
 idf_build_get_property(soc_name IDF_TARGET)
 
 idf_component_register(SRC_DIRS "."
-                    INCLUDE_DIRS "${include_dirs}"
-                    REQUIRES unity test_utils)
+                    PRIV_INCLUDE_DIRS "${include_dirs}"
+                    PRIV_REQUIRES unity test_utils)
