--- a/components/esp_common/test/CMakeLists.txt
+++ b/components/esp_common/test/CMakeLists.txt
@@ -1,3 +1,3 @@
 idf_component_register(SRC_DIRS .
-                       REQUIRES unity spi_flash
+                       PRIV_REQUIRES unity spi_flash
                     )
