--- a/components/wpa_supplicant/CMakeLists.txt
+++ b/components/wpa_supplicant/CMakeLists.txt
@@ -5,6 +5,10 @@ set(srcs "port/os_xtensa.c"
     "src/ap/wpa_auth_ie.c"
     "src/common/sae.c"
     "src/common/wpa_common.c"
+    "src/common/dpp.c"
+    "src/crypto/aes-ctr.c"
+    "src/crypto/aes-siv.c"
+    "src/crypto/sha256-kdf.c"
     "src/crypto/aes-cbc.c"
     "src/crypto/aes-ccm.c"
     "src/crypto/aes-internal-dec.c"
@@ -17,7 +21,8 @@ set(srcs "port/os_xtensa.c"
     "src/crypto/sha256-tlsprf.c"
     "src/crypto/bignum.c"
     "src/crypto/ccmp.c"
-    "src/crypto/crypto_mbedtls.c"
+    "src/crypto/crypto_mbedtls-bignum.c"
+    "src/crypto/crypto_mbedtls-ec.c"
     "src/crypto/crypto_ops.c"
     "src/crypto/crypto_internal-cipher.c"
     "src/crypto/crypto_internal-modexp.c"
@@ -78,6 +83,7 @@ set(srcs "port/os_xtensa.c"
     "src/utils/uuid.c"
     "src/utils/wpabuf.c"
     "src/utils/wpa_debug.c"
+    "src/utils/json.c"
     "src/wps/wps.c"
     "src/wps/wps_attr_build.c"
     "src/wps/wps_attr_parse.c"
@@ -114,4 +120,5 @@ target_compile_definitions(${COMPONENT_LIB} PRIVATE
     CONFIG_WPA3_SAE
     CONFIG_TLSV12
     CONFIG_SHA256
+    CONFIG_DPP
     )
