--- a/components/soc/soc/esp32s2/CMakeLists.txt
+++ b/components/soc/soc/esp32s2/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_library(soc_esp32s2 STATIC
     "adc_periph.c"
     "dac_periph.c"
+    "dedic_gpio_periph.c"
     "gpio_periph.c"
     "pcnt_periph.c"
     "rtc_io_periph.c"
