--- a/components/esp_common/Kconfig
+++ b/components/esp_common/Kconfig
@@ -224,6 +224,11 @@ menu "Common ESP-related"
     config ESP_MAC_ADDR_UNIVERSE_BT
         bool
 
+    config ESP_MAC_ADDR_UNIVERSE_BT_OFFSET
+        int
+        default 2 if ESP32_UNIVERSAL_MAC_ADDRESSES_FOUR
+        default 1 if ESP32_UNIVERSAL_MAC_ADDRESSES_TWO
+
     config ESP_MAC_ADDR_UNIVERSE_ETH
         bool
 
