esp_system: introduce intermediary function to call after system init
This MR uses an intermediary function `start_app` to call after system
initialization instead of `app_main`.

In RTOS builds, freertos provides `start_app` and calls `app_main`.
In non-RTOS builds, user provides `start_app` directly.

--- a/components/esp_system/CMakeLists.txt
+++ b/components/esp_system/CMakeLists.txt
@@ -8,9 +8,12 @@ idf_component_register(SRCS "panic.c" "system_api.c" "startup.c"
 
 add_subdirectory(port)
 
-# Rely on user code to define app_main
-target_link_libraries(${COMPONENT_LIB} INTERFACE "-u app_main")
+# After system initialization, `start_app` (and its other cores variant) is called. 
+# This is provided by the user or from another component. Since we can't establish 
+# dependency on what we don't know, force linker to not drop the symbol regardless
+# of link line order.
+target_link_libraries(${COMPONENT_LIB} INTERFACE "-u start_app")
 
 if (NOT CONFIG_ESP_SYSTEM_SINGLE_CORE_MODE)
-    target_link_libraries(${COMPONENT_LIB} INTERFACE "-u app_mainX")
+    target_link_libraries(${COMPONENT_LIB} INTERFACE "-u start_app_other_cores")
 endif()
