esp_system: restore deleted no stack check flag
Restores the change of startup refactor changes removed the no stack
check protection flag when compiling the source file that contains
execution of constructors - which contains function to setup stack
guard. Restore that and update the source file, since this is in the 2nd
stage of the startup now.

Closes [Github: espressif/esp-idf]/issues/5617

--- a/components/esp_system/CMakeLists.txt
+++ b/components/esp_system/CMakeLists.txt
@@ -17,3 +17,9 @@ target_link_libraries(${COMPONENT_LIB} INTERFACE "-u start_app")
 if (NOT CONFIG_ESP_SYSTEM_SINGLE_CORE_MODE)
     target_link_libraries(${COMPONENT_LIB} INTERFACE "-u start_app_other_cores")
 endif()
+
+# Disable stack protection in files which are involved in initialization of that feature
+set_source_files_properties(
+    startup.c
+    PROPERTIES COMPILE_FLAGS
+    -fno-stack-protector)
