--- a/components/esp_system/port/esp32s3/CMakeLists.txt
+++ b/components/esp_system/port/esp32s3/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(srcs "../async_memcpy_impl_gdma.c" "dport_panic_highint_hdl.S" "clk.c" "reset_reason.c")
 add_prefix(srcs "${CMAKE_CURRENT_LIST_DIR}/" ${srcs})
 
+target_sources(${COMPONENT_LIB} PRIVATE ${srcs})
+
 #ld_include_panic_highint_hdl is added as an undefined symbol because otherwise the
 #linker will ignore panic_highint_hdl.S as it has no other files depending on any
 #symbols in it.
