--- a/components/esp_common/test/CMakeLists.txt
+++ b/components/esp_common/test/CMakeLists.txt
@@ -1,2 +1,3 @@
 idf_component_register(SRC_DIRS .
-                       PRIV_REQUIRES unity test_utils spi_flash)
+                       PRIV_REQUIRES cmock test_utils spi_flash
+                    )
