--- a/components/esp_timer/test/CMakeLists.txt
+++ b/components/esp_timer/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 idf_component_register(SRC_DIRS "."
                        PRIV_INCLUDE_DIRS "../private_include"
-                       PRIV_REQUIRES unity test_utils)
+                       PRIV_REQUIRES cmock test_utils)
 
 if(CONFIG_ESP_TIMER_IMPL_FRC2)
     idf_build_set_property(COMPILE_DEFINITIONS "-DESP_TIMER_DYNAMIC_OVERFLOW_VAL" APPEND)
