unit_test:refactor ref clock to use RMT carrier

--- a/components/esp_common/test/CMakeLists.txt
+++ b/components/esp_common/test/CMakeLists.txt
@@ -1,3 +1,2 @@
 idf_component_register(SRC_DIRS .
-                       PRIV_REQUIRES unity spi_flash
-                    )
+                       PRIV_REQUIRES unity test_utils spi_flash)
