pcnt: add pcnt peripheral signal connections
pcnt: fix bug in clear interrupt status

--- a/components/soc/soc/esp32s2/CMakeLists.txt
+++ b/components/soc/soc/esp32s2/CMakeLists.txt
@@ -2,6 +2,7 @@ add_library(soc_esp32s2 STATIC
     "adc_periph.c"
     "dac_periph.c"
     "gpio_periph.c"
+    "pcnt_periph.c"
     "rtc_io_periph.c"
     "rtc_periph.c"
     "interrupts.c"
