--- a/components/soc/soc/esp32s3/CMakeLists.txt
+++ b/components/soc/soc/esp32s3/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(soc_esp32s3 STATIC
     "i2s_periph.c"
     "interrupts.c"
     "ledc_periph.c"
+    "pcnt_periph.c"
     "rtc_io_periph.c"
     "rtc_periph.c"
     "sdio_slave_periph.c"
