feature(rtc): rename i2c_xxx to regi2c_xxx

--- a/components/soc/soc/esp32s3/CMakeLists.txt
+++ b/components/soc/soc/esp32s3/CMakeLists.txt
@@ -14,4 +14,4 @@ add_library(soc_esp32s3 STATIC
     "touch_sensor_periph.c"
     "uart_periph.c")
 
-target_include_directories(soc_esp32s3 PUBLIC . include ../include)
+target_include_directories(soc_esp32s3 PUBLIC include ../include private_include)
