timergroup: move interrupt index into peripheral description file
1. Added timer_group_periph.c file, describing module global signals
   (e.g. interrupt index)
2. Added more caps in soc_caps.h

--- a/components/soc/esp32s3/CMakeLists.txt
+++ b/components/soc/esp32s3/CMakeLists.txt
@@ -15,6 +15,7 @@ set(srcs
     "sigmadelta_periph.c"
     "soc_memory_layout.c"
     "spi_periph.c"
+    "timer_periph.c"
     "touch_sensor_periph.c"
     "uart_periph.c")
 
