sigma_delta: add periph signal list and support esp32-s3

--- a/components/soc/esp32s2/CMakeLists.txt
+++ b/components/soc/esp32s2/CMakeLists.txt
@@ -10,6 +10,7 @@ set(srcs
     "pcnt_periph.c"
     "rtc_io_periph.c"
     "rtc_periph.c"
+    "sigmadelta_periph.c"
     "soc_memory_layout.c"
     "spi_periph.c"
     "touch_sensor_periph.c"
