--- a/components/soc/esp32s3/CMakeLists.txt
+++ b/components/soc/esp32s3/CMakeLists.txt
@@ -12,6 +12,7 @@ set(srcs
     "rtc_periph.c"
     "sdio_slave_periph.c"
     "sdmmc_periph.c"
+    "sigmadelta_periph.c"
     "soc_memory_layout.c"
     "spi_periph.c"
     "touch_sensor_periph.c"
