esp32: move hw random

--- a/components/esp_hw_support/CMakeLists.txt
+++ b/components/esp_hw_support/CMakeLists.txt
@@ -7,7 +7,7 @@ endif()
 
 set(srcs "compare_set.c" "cpu_util.c")
 if(NOT BOOTLOADER_BUILD)
-    list(APPEND srcs "clk_ctrl_os.c" "mac_addr.c")
+    list(APPEND srcs "clk_ctrl_os.c" "mac_addr.c" "hw_random.c")
 endif()
 
 idf_component_register(SRCS ${srcs}
