esp_system: split esp_system.h header

--- a/components/esp_hw_support/port/esp32s2/CMakeLists.txt
+++ b/components/esp_hw_support/port/esp32s2/CMakeLists.txt
@@ -9,7 +9,9 @@ set(srcs
     "rtc_sleep.c"
     "rtc_time.c"
     "rtc_wdt.c"
-    "regi2c_ctrl.c")
+    "regi2c_ctrl.c"
+    "chip_info.c"
+    )
 
 add_prefix(srcs "${CMAKE_CURRENT_LIST_DIR}/" "${srcs}")
 target_sources(${COMPONENT_LIB} PRIVATE "${srcs}")
