--- a/components/esp_hw_support/port/esp32s3/CMakeLists.txt
+++ b/components/esp_hw_support/port/esp32s3/CMakeLists.txt
@@ -9,6 +9,7 @@ set(srcs
     "rtc_sleep.c"
     "rtc_time.c"
     "rtc_wdt.c"
+    "chip_info.c"
     )
 
 add_prefix(srcs "${CMAKE_CURRENT_LIST_DIR}/" "${srcs}")
