--- a/components/esp_hw_support/port/esp32c3/CMakeLists.txt
+++ b/components/esp_hw_support/port/esp32c3/CMakeLists.txt
@@ -4,7 +4,9 @@ set(srcs "cpu_util_esp32c3.c"
          "rtc_init.c"
          "rtc_pm.c"
          "rtc_sleep.c"
-         "rtc_time.c")
+         "rtc_time.c"
+         "chip_info.c"
+         )
 
 add_prefix(srcs "${CMAKE_CURRENT_LIST_DIR}/" "${srcs}")
 
