--- a/components/esp_hw_support/port/esp32s2/CMakeLists.txt
+++ b/components/esp_hw_support/port/esp32s2/CMakeLists.txt
@@ -13,6 +13,10 @@ set(srcs
     "chip_info.c"
     )
 
+if(NOT BOOTLOADER_BUILD)
+    list(APPEND srcs "async_memcpy_impl_cp_dma.c")
+endif()
+
 add_prefix(srcs "${CMAKE_CURRENT_LIST_DIR}/" "${srcs}")
 target_sources(${COMPONENT_LIB} PRIVATE "${srcs}")
 
